[package]
name = "joblin"
authors = ["medricet"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.10", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
